letter-spacing fix

--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,10 @@ main {
 
 label {
     color: var(--smokey_grey);
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 800;
     text-transform: uppercase;
+    letter-spacing: 0.2rem;
 }
 
 input {
@@ -82,7 +83,7 @@ span {
 }
 
 .controls {
-    margin-top: 30px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -115,6 +116,7 @@ img {
 .result {
     font-size: 60px;
     font-weight: 800;
+    font-style: italic;
 }
 
     
@@ -122,6 +124,7 @@ img {
     font-size: 60px;
     font-weight: 800;
     color: var(--purple);
+    letter-spacing: 0.2rem;
 }
 
 /* display block needed because body display flex */
